--- a/config-example/apps/web.yaml
+++ b/config-example/apps/web.yaml
@@ -1,25 +1,25 @@
 web:
-  host: www.example.com
-  port: 80
-  ssl_enabled: true
-  ssl_certificate: /path/to/certificate.crt
-  ssl_key: /path/to/key.key
-  static_dir: /var/www/static
-  upload_dir: /var/www/uploads
-  session_timeout: 30
-  auth_service_url: https://auth.example.com
-  payment_service_url: https://payment.example.com
-  logging:
-    level: INFO
-    format: "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
-    handlers:
-      - console
-      - file
-    file:
-      filename: /var/log/web.log
-      max_bytes: 10485760
-      backup_count: 5
-  monitoring:
-    enabled: true
-    endpoint: http://monitoring.example.com
-    scrape_interval: 15s
+    auth_service_url: https://auth.example.com
+    host: www.example.com
+    logging:
+        file:
+            backup_count: 5
+            filename: /var/log/web.log
+            max_bytes: 10485760
+        format: '%(asctime)s - %(name)s - %(levelname)s - %(message)s'
+        handlers:
+            - console
+            - file
+        level: INFO
+    monitoring:
+        enabled: false
+        endpoint: http://monitoring.example.com
+        scrape_interval: 15s
+    payment_service_url: https://payment.example.com
+    port: 8080
+    session_timeout: 30
+    ssl_certificate: /path/to/certificate.crt
+    ssl_enabled: true
+    ssl_key: /path/to/key.key
+    static_dir: /var/www/static
+    upload_dir: /var/www/uploads
