--- a/config-example/tools/log.yaml
+++ b/config-example/tools/log.yaml
@@ -1,30 +1,38 @@
 logging:
-  level: INFO
-  format: "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
-  handlers:
-    console:
-      class: logging.StreamHandler
-      level: DEBUG
-    file:
-      class: logging.FileHandler
-      level: INFO
-      filename: /var/log/app.log
-      max_bytes: 10485760
-      backup_count: 10
-  loggers:
-    web:
-      level: INFO
-      handlers: [console, file]
-      propagate: true
-    auth_service:
-      level: DEBUG
-      handlers: [console, file]
-      propagate: true
-    payment_service:
-      level: INFO
-      handlers: [console, file]
-      propagate: true
-    database:
-      level: WARNING
-      handlers: [console, file]
-      propagate: true
+    format: '%(asctime)s - %(name)s - %(levelname)s - %(message)s'
+    handlers:
+        console:
+            class: logging.StreamHandler
+            level: DEBUG
+        file:
+            backup_count: 10
+            class: logging.FileHandler
+            filename: /var/log/app.log
+            level: INFO
+            max_bytes: 10485760
+    level: INFO
+    loggers:
+        auth_service:
+            handlers:
+                - console
+                - file
+            level: DEBUG
+            propagate: true
+        database:
+            handlers:
+                - console
+                - file
+            level: WARNING
+            propagate: true
+        payment_service:
+            handlers:
+                - console
+                - file
+            level: INFO
+            propagate: true
+        web:
+            handlers:
+                - console
+                - file
+            level: INFO
+            propagate: true
