--- a/.github/workflows/init-test.yaml
+++ b/.github/workflows/init-test.yaml
@@ -21,6 +21,6 @@ jobs:
           go-version: 1.22
       - name: Build go
         run: go build
-        working-directory: ./go-test
+        working-directory: go-test
       - name: Run go
         run: ./gotest
