--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -31,27 +31,23 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.22
-      - name: Echo secrets
-        run: |
-          echo ${{secrets.TOKEN}}
-          echo ${{ github.actor }}
-          echo ${{ github.event.inputs.environment }}
-      # - name: Run Replacer
-      #   working-directory: config-example
-      #   run: go run main.go -key currency -value EUR
 
-      # - name: Create Pull Request
-      #   uses: peter-evans/create-pull-request@v3
-      #   with:
-      #     token: ${{ secrets.TOKEN }}
-      #     commit-message: "Edit Configuration"
-      #     title: "Deploy Configuration Changes"
-      #     body: |
-      #       This pull request was automatically`.
+      - name: Run Replacer
+        working-directory: config-example
+        run: go run main.go -key currency -value EUR
 
-      #       Checkout the branch `${{ github.actor }}/deploy-${{ github.event.inputs.environment }}` to see the changes.
-      #     branch: "${{ github.actor }}/generate-${{ github.event.inputs.environment }}"
-      #     base: "main"
-      #     labels: "automated"
-      #     assignees: ${{ github.actor }}
-      #     draft: false
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v3
+        with:
+          token: ${{ secrets.TOKEN }}
+          commit-message: "Edit Configuration"
+          title: "Deploy Configuration Changes"
+          body: |
+            This pull request was automatically`.
+
+            Checkout the branch `${{ github.actor }}/deploy-${{ github.event.inputs.environment }}` to see the changes.
+          branch: "${{ github.actor }}/generate-${{ github.event.inputs.environment }}"
+          base: "main"
+          labels: "automated"
+          assignees: ${{ github.actor }}
+          draft: false
