--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -73,4 +73,4 @@ jobs:
         run: |
           echo "$SSH_PRIVATE_KEY" > key.pem
           chmod 600 key.pem
-          scp -o StrictHostKeyChecking=no -i key.pem -r ./config-example $USERNAME@$HOST:~/
+          scp -o StrictHostKeyChecking=no -i key.pem -r ./config-example/apps ./config-example/dbs ./config-example/services ./config-example/tools $USERNAME@$HOST:~/
